fixes overlap of profile and navbar, adds styling to profile, adds buttons

--- a/src/components/navigation/Navigation.scss
+++ b/src/components/navigation/Navigation.scss
@@ -7,6 +7,7 @@
 }
 
 .navigation-container {
+  border: 1px solid red;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -155,7 +156,7 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   .dropdownContainer {
     display: flex;
   }
